--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,22 @@
         android:theme="@style/Theme.Login"
         tools:targetApi="31">
         <activity
+            android:name=".CuacaMainActivity"
+            android:exported="false"
+            android:label="Weather Info" />
+        <activity
+            android:name=".ForexMainActivity"
+            android:exported="false"
+            android:label="Forex Rates" />
+        <activity
+            android:name=".AddMahasiswaActivity"
+            android:exported="false"
+            android:label="Tambah Data Mahasiswa" />
+        <activity
+            android:name=".TampilMahasiswaActivity"
+            android:exported="false"
+            android:label="Menu Mahasiswa" />
+        <activity
             android:name=".MenuActivity"
             android:exported="false" />
         <activity
