--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,14 @@
         android:theme="@style/Theme.Login"
         tools:targetApi="31">
         <activity
+            android:name=".HotelMainActivity"
+            android:exported="false"
+            android:label="Menu Hotel" />
+        <activity
+            android:name=".TabLayoutMainActivity"
+            android:exported="false"
+            android:label="Menu TabLayout" />
+        <activity
             android:name=".CuacaMainActivity"
             android:exported="false"
             android:label="Weather Info" />
